--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-segment
-test
-gray.py
-get_num_pixels.py
 convert_txt_2_csv.py
-Annot_List.csv
+4CM11_2_R_37.xlsx
 Annotation_List.xlsx
+get_num_pixels.py
+1CM1_1_R_#218
+4CM11_2_R_#37
+Annot_List.csv
+__pycache__
+xlsx_test.py
+segment
+gray.py
+test
